# mcp_tutorial

./: .gitignore  README.md  pyproject.toml
diagrams/: .$sse_client_server_communication.drawio.bkp  .$sse_client_server_communication.drawio.dtmp  mcp_sse.drawio  sequence_diagram_fixed.drawio  sse_client_server_communication.drawio
examples/: list_tools.json  server_description.json  tools_call.json
server/api/: __init__.py  app.py
server/api/mcp_api/: __init__.py
sse/: README.md  client.py  pyproject.toml
sse/server/: __main__.py
sse/server/api/: app.py
sse/server/api/mcp_api/: router.py  utils.py
stdio/: README.md  client.py  gigachat-client.py  pyproject.toml
